--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,24 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+.country-list__item {
+  display: flex;
+  align-items: center;
+}
+
+.country-info__box {
+  display: flex;
+  align-items: center;
+}
+
+.country-list__img {
+  margin-right: 10px;
+}
+
+.country-list__title {
+  font-family: Roboto;
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.19;
+}
